# envsbot

./: .coveragerc  .drone.yml  .gitignore  README.md  admin_help.txt  bot.py  command.py  config_sample.json  config_sample.py  ednabot.py  envsbot.py  plugin_manager.py  pyproject.toml  requirements-dev.txt  requirements.txt  user_help.txt
database/: manager.py  reminders.py  users.py
plugins/: _admin.py  _core.py  _reg_profile.py  _test.py  birthday_notify.py  core.py  dice.py  ducks.py  help.py  information.py  karma.py  plugins.py  poll.py  profile.py  reminder.py  rooms.py  rss.py  sed.py  status.py  tell.py  tools.py  urlcheck.py  users.py  vcard.py  weather.py  weather_time.py  xkcd.py  xmpp.py
tests/: conftest.py  test_bot.py  test_command_system.py  test_commands.py  test_commands_crash.py  test_integration.py  test_permissions.py  test_plugin_isolation.py  test_plugin_reload.py  test_plugins.py  xmpp_fixtures.py
tests/DB/: test_database_manager.py  test_rooms.py  test_users.py
tests/bot_core/: test_bot.py  test_permissions.py  test_reply.py
tests/commands/: test_commands.py  test_commands_crash.py  test_commands_system.py
tests/integration/: test_integration.py
tests/plugins/: test_plugin_manager_property.py  test_plugin_manager_unit.py  test_plugin_reload.py  test_plugin_reload_integitry.py
utils/: command.py  config.py  plugin_helper.py  plugin_manager.py  presence_manager.py  rate_limiter.py
