[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "envsbot"
version = "0.1.0"
description = "A modular plugin-driven XMPP bot framework"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "~dan", email = "dan@envs.net" }
]

license = { text = "GPL-3.0-only" }

dependencies = [
    "slixmpp>=1.8,<2",
    "aiosqlite>=0.20,<1"
]

keywords = [
    "xmpp",
    "chatbot",
    "bot",
    "xmpp-bot",
    "plugins",
    "automation"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers, XMPP operators",
    "Topic :: Communications :: Chat",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "hypothesis>=6"
]

[tool.setuptools]
packages = ["plugins", "database", "utils"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [ "-v", "--cov=.", "--cov-report=term" ]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "tests/*",
    "venv/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
